tests/sksl/errors/IncompleteFunctionCall.glsl
### Compilation failed:

error: 2: expected '(' to begin function call
    mix;
       ^
1 error
